--- a/src/components/EntryText/EntryText.module.scss
+++ b/src/components/EntryText/EntryText.module.scss
@@ -31,6 +31,7 @@
   place-items: center;
   gap: 1rem;
   width: max-content;
+  grid-template: 'watchVideo listenOnSouncloud';
 
   @include mobile {
     grid-auto-flow: row;
